stabilizing 1